--- a/svc/hecate/src/components/hud/hud.module.scss
+++ b/svc/hecate/src/components/hud/hud.module.scss
@@ -5551,6 +5551,7 @@ $light-shadow: rgba(0, 0, 0, 0.1);
   display: flex;
   flex-direction: column;
   gap: 0.75rem;
+  text-align: left;
 
   &:hover {
     border-color: rgba($echo-blue, 0.4);
@@ -5989,6 +5990,7 @@ $light-shadow: rgba(0, 0, 0, 0.1);
   gap: 0.25rem;
   flex: 1;
   min-width: 0;
+  text-align: left;
 }
 
 .taskName, .mcpName, .agentName {
@@ -5997,6 +5999,7 @@ $light-shadow: rgba(0, 0, 0, 0.1);
   font-family: 'Courier New', monospace;
   font-size: 1rem;
   line-height: 1.2;
+  text-align: left;
 }
 
 .taskType, .mcpStatus, .agentStatus {
@@ -6009,6 +6012,7 @@ $light-shadow: rgba(0, 0, 0, 0.1);
   border-radius: 3px;
   display: inline-block;
   width: fit-content;
+  text-align: left;
 }
 
 .taskStatus {
@@ -6900,6 +6904,11 @@ $light-shadow: rgba(0, 0, 0, 0.1);
     background: rgba(0, 0, 0, 0.8);
   }
 
+  &.message-siren {
+    border-color: rgba($echo-purple, 0.5);
+    background: rgba(0, 0, 0, 0.8);
+  }
+
   &.message-user {
     border-color: rgba($lightning-silver, 0.4);
     background: rgba(0, 0, 0, 0.6);
@@ -6926,6 +6935,13 @@ $light-shadow: rgba(0, 0, 0, 0.1);
   display: flex;
   align-items: center;
   gap: 0.5rem;
+}
+
+.sirenMessageSender {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  color: $echo-purple;
 }
 
 .messageTime {
