--- a/svc/hecate/src/pages/home/index.module.scss
+++ b/svc/hecate/src/pages/home/index.module.scss
@@ -56,6 +56,7 @@ html, body {
   height: 100%;
   margin: 0;
   overflow: hidden;
+  background-color: #0a0a0a;
 }
 
 @keyframes subtle-shift {
@@ -143,6 +144,7 @@ body {
   font-family: $batman-font;
   color: $text-color;
   font-size: $base-font-size;
+  background-color: #0a0a0a;
 }
 
 h1, h2, h3, h4, h5, h6 {
